--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is testing 🚀
 on: [push]
 
 env:
-  TF_CLOUD_ORGANIZATION: "nguyen-uit"
+  TF_CLOUD_ORGANIZATION: "nguyen_uit"
   TF_WORKSPACE: "test"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
