--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -3,8 +3,8 @@ run-name: ${{ github.actor }} is testing 🚀
 on: [push]
 
 env:
-  TF_CLOUD_ORGANIZATION: "nguyen_uit"
-  TF_WORKSPACE: "test"
+  TF_CLOUD_ORGANIZATION: "${{ secrets.TF_CLOUD_ORGANIZATION }}"
+  TF_WORKSPACE:  "${{ secrets.TF_WORKSPACE }}"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
 
