--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -1,16 +1,17 @@
-name: Test GitHub Actions && Terraform
-run-name: ${{ github.actor }} is testing 🚀
-on: [push]
+name: "Terraform Plan"
+
+on:
+  pull_request:
 
 env:
-  TF_CLOUD_ORGANIZATION: "${{ secrets.TF_CLOUD_ORGANIZATION }}"
-  TF_WORKSPACE:  "${{ secrets.TF_WORKSPACE }}"
+  TF_CLOUD_ORGANIZATION: "nguyentk_uit"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+  TF_WORKSPACE: "test"
   CONFIG_DIRECTORY: "./"
 
-
 jobs:
-  Terraform:
+  terraform:
+    if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
     name: "Terraform Plan"
     runs-on: ubuntu-latest
     permissions:
@@ -18,10 +19,10 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.1.1
+        uses: actions/checkout@v3
 
       - name: Upload Configuration
-        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.2.0
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: plan-upload
         with:
           workspace: ${{ env.TF_WORKSPACE }}
@@ -29,7 +30,7 @@ jobs:
           speculative: true
 
       - name: Create Plan Run
-        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.2.0
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
         id: plan-run
         with:
           workspace: ${{ env.TF_WORKSPACE }}
@@ -37,7 +38,7 @@ jobs:
           plan_only: true
 
       - name: Get Plan Output
-        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.2.0
+        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
         id: plan-output
         with:
           plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
