--- a/.github/workflows/apply.yaml
+++ b/.github/workflows/apply.yaml
@@ -1,5 +1,5 @@
 name: Test GitHub Actions && Terraform Apply
-run-name: ${{ github.actor }} is testing 
+run-name: ${{ github.actor }} is applying 
 on: 
   push:
     branches:
@@ -7,7 +7,7 @@ on:
 
 env:
   TF_CLOUD_ORGANIZATION: "${{ secrets.TF_CLOUD_ORGANIZATION }}"
-  TF_WORKSPACE:  "test1"
+  TF_WORKSPACE:  "test"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
 
