--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -1,11 +1,11 @@
 name: Test GitHub Actions && Terraform Plan
-run-name: ${{ github.actor }} is testing 🚀
+run-name: ${{ github.actor }} is planning 🚀
 on: 
   pull_request:
 
 env:
   TF_CLOUD_ORGANIZATION: "${{ secrets.TF_CLOUD_ORGANIZATION }}"
-  TF_WORKSPACE:  "test1"
+  TF_WORKSPACE:  "test"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
 
