--- a/.github/workflows/apply.yaml
+++ b/.github/workflows/apply.yaml
@@ -1,42 +1,45 @@
-name: Github actions 202
-run-name: ${{ github.actor }} apply 🚀
+name: Test GitHub Actions && Terraform Apply
+run-name: ${{ github.actor }} is testing 
 on: 
   push:
     branches:
       - main
+
 env:
+  TF_CLOUD_ORGANIZATION: "${{ secrets.TF_CLOUD_ORGANIZATION }}"
+  TF_WORKSPACE:  "test1"
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   CONFIG_DIRECTORY: "./"
-  TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORGANIZATION }}
-  TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+
 
 jobs:
-  Terraform:
+  terraform:
     name: "Terraform Apply"
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    defaults:
-      run:
-        working-directory: ${{ env.CONFIG_DIRECTORY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-      - name: Setup Terraform with specified version on the runner
-        uses: hashicorp/setup-terraform@v3
+      - name: Upload Configuration
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.2.0
+        id: apply-upload
         with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-    
-      - name: Terraform Init
-        id: init
-        run: terraform init
+          workspace: ${{ env.TF_WORKSPACE }}
+          directory: ${{ env.CONFIG_DIRECTORY }}
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -no-color -input=false
-  
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false
+      - name: Create Apply Run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.2.0
+        id: apply-run
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
+
+      - name: Apply
+        uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.2.0
+        if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+        id: apply
+        with:
+          run: ${{ steps.apply-run.outputs.run_id }}
+          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
